--- a/MkuYemekhane/package.json
+++ b/MkuYemekhane/package.json
@@ -11,6 +11,8 @@
     "native-base": "^2.4.1",
     "react": "16.2.0",
     "react-native": "0.53.0",
+    "react-native-calendars": "^1.17.7",
+    "react-native-modalbox": "^1.4.2",
     "react-native-router-flux": "^4.0.0-beta.28",
     "react-redux": "^5.0.7",
     "redux": "^3.7.2",
